Just versioned the current work before abadon
 - some tryouts